[gd_scene load_steps=3 format=3 uid="uid://c8tpq4w7vnh8h"]

[ext_resource type="Script" path="res://scripts/ui/CardUI.gd" id="1_q5p8m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.2, 0.2, 0.3, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.9, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(150, 230)
layout_mode = 3
anchors_preset = 0
offset_right = 150.0
offset_bottom = 230.0
script = ExtResource("1_q5p8m")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="CardImage" type="TextureRect" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 145.0
offset_bottom = 192.0
stretch_mode = 5
expand_mode = 1

[node name="CardName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 5.0
offset_top = 195.0
offset_right = 145.0
offset_bottom = 225.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "卡牌名称"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_card_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_card_mouse_exited"]
